--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@tanstack/react-router": "^1.67.0",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
-    "isoWeek": "link:dayjs/plugin/isoWeek",
+    "isoWeek": "file:dayjs/plugin/isoWeek",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
