--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
         uses: docker/build-push-action@v5.3.0
         with:
           context: .
-          file: "{context}/deploy/Dockerfile"
+          file: "./deploy/Dockerfile"
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
