--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,5 +37,7 @@ jobs:
           context: .
           file: "./deploy/Dockerfile"
           push: true
+          build-args: |
+            VITE_BASE_API_URL=${{ secrets.VITE_BASE_API_URL }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
