--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
         env:
           FRONTEND_IMAGE: ${{ steps.meta.outputs.tags }}
         run: |
-          DOCKER_HOST=remote docker compose -f docker-compose.yml up -d
+          docker --context remote compose -f docker-compose.yml up -d
 
       - name: cleanup
         run: rm -rf ~/.ssh
