--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
           file: "./deploy/Dockerfile"
           push: true
           build-args: |
-            VITE_BASE_API_URL=${{ env.BACKEND_API_URL }}
+            VITE_BASE_API_URL=${{ vars.BACKEND_API_URL }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
