--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,7 +80,7 @@ jobs:
         env:
           FRONTEND_IMAGE: ${{ steps.meta.outputs.tags }}
         run: |
-          docker --context remote compose -f deploy/docker-compose.yml up -d --remove-orphans --force-recreate
+          docker --context remote compose -f deploy/docker-compose.yml pull && docker --context remote compose -f deploy/docker-compose.yml up -d --remove-orphans
 
       - name: cleanup
         run: rm -rf ~/.ssh
